# remote-devcontainer-python

./: .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.MD  README.md  build.sh  container_config.json  docker-compose.yml  evn.example  install_container_config.sh  install_dev_packages.sh  pyproject.toml  requirements-dev.txt  run.sh  stop.sh  test_remote.sh  wipe.sh
.devcontainer/: devcontainer.json
